Dano wins curveball challenge.

--- a/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
@@ -4,10 +4,11 @@
 @using Radzen.Blazor
 
 <RadzenLayout>
-    <RadzenHeader class="bg-white">
-        <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" Gap="" >
-            <RadzenImage Path="images/logo.png" Style="width:200px" AlternateText="logo" />
-
+    <RadzenHeader class="bg-primary">
+        <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" Gap="2rem" >
+        
+            <RadzenImage Path="images/logo.png" Style="width: 200px" AlternateText="logo" class="2rem" />
+       
             <RadzenPanel AlignItems="AlignItems.Center " class="shadow-none">
                 <RadzenPanelMenu class="">
                     <RadzenRow AlignItems="AlignItems.Center" class="rz-text-align-center " Gap="2rem">
