--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -19,23 +19,23 @@
 
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
-@attribute [Authorize]
+
 
 
 
 
 <PageTitle>Hjem</PageTitle>
 
-<RadzenRow AlignItems="AlignItems.Center" class="rz-text-align-center pt-2" Gap="2rem" >
+<RadzenRow AlignItems="AlignItems.Center" class="rz-text-align-center pt-2 row-cols-sm-auto" Gap="1rem" >
     <RadzenCard class="bg-opacity-10  " >
-        <RadzenRow AlignItems="AlignItems.Center" class=" rz-my-10 bg-opacity-25 flex-column">
-            <RadzenImage Path="images/undraw_add_files_re_v09g.png" Style="width: 10rem" AlternateText="import" class="p-2" />
+        <RadzenRow AlignItems="AlignItems.Center" class=" rz-my-5 bg-opacity-25 flex-column">
+            <RadzenImage Path="images/undraw_add_files_re_v09g.png" Style="width: 15rem" AlternateText="import" class="p-2" />
             <RadzenButton Text="Importer fil" class="mt-4 bg-danger" Click="@ImporterPage" />
         </RadzenRow>
     </RadzenCard>
     <RadzenCard class="bg-opacity-10" >
-        <RadzenRow AlignItems="AlignItems.Center" class=" rz-my-10 bg-opacity-25 flex-column " >
-            <RadzenImage Path="images/undraw_filter_re_sa16.png" Style="width: 10rem" AlternateText="generer" class="p-2" />
+        <RadzenRow AlignItems="AlignItems.Center" class=" rz-my-5 bg-opacity-20 flex-column " >
+            <RadzenImage Path="images/undraw_filter_re_sa16.png" Style="width: 15rem" AlternateText="generer" class="p-2" />
             <RadzenButton Text="Generer data" class="mt-4 bg-danger" Click="@GeneratorPage" />
         </RadzenRow>
     </RadzenCard>
