Fikset på bildene.

--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -7,7 +7,7 @@
     <RadzenHeader class="bg-white rz-p-2">
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Gap="">
         <div id="logo" class="">
-            <RadzenImage class="" Path="images/logo.png" Style="width: 12rem" AlternateText="community" />
+            <RadzenImage class="" Path="bilder/datagenerator.png" Style="width: 12rem" AlternateText="community" />
        </div>        
         </RadzenStack>
     </RadzenHeader>
