Revert "Logout URI"
This reverts commit 7fb1da4c4c935da4bc6e59a33a408d1ae6e14071.

--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -29,7 +29,7 @@
             <RadzenPanelMenuItem Text="Hjem" Icon="home" Path="" />
             <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="Importer" />
             <RadzenPanelMenuItem Text="Generator" Icon="create" Path="Generator" />
-            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/Account/Logout" />
+            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path=""  />
         </RadzenPanelMenu>
     </RadzenSidebar>
 
