--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -8,7 +8,7 @@
 @using System;
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
-@attribute [Authorize]
+
 
 
 <PageTitle>Generator</PageTitle>
@@ -105,7 +105,7 @@
 
  
 
-    private async Task SendId()
+    public async Task SendId()
     {
 
         if (ids != 0 && flereids != null)
