--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -37,13 +37,31 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
 
 
 <RadzenCard class="py-4 flex-column" Style="width: 100%">
+
+<RadzenAlert Title="Last opp en fil" AlertStyle="AlertStyle.Info" Variant="Variant.Flat" Shade="Shade.Lighter" AllowClose=false>
+        Velg en fil for å starte importen
+</RadzenAlert>
+
     <div id="lastOpp">
         <InputFile id="lastOppID" OnChange="LoadFiles" />
+    </div>
+
+    <RadzenAlert Title="Skriv inn domene for mail" AlertStyle="AlertStyle.Info" Variant="Variant.Flat" Shade="Shade.Lighter" AllowClose=false>
+        F.eks: Generator.com
+    </RadzenAlert>
+
+    <div class="py-3">
+        <RadzenTextBox id="generatormanuelt"
+                       Value="@domain"
+                       Change=@(args => domain = args)
+                       Placeholder="F.eks: Generator.com"
+                       style="width: 200px" />
     </div>
 
     <div id="oppLastning">
         <RadzenButton id="oppLastningID" Text="Upload" Click=@(args => Opplastning(file)) class="d-block pt-2 mt-4 bg-success" />
     </div>
+
 </RadzenCard>
 
 
@@ -70,6 +88,7 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
         <Columns>
             <RadzenGridColumn  TItem="BrukerRespons" Property="Id" Title="ID" Width="80px" Filterable="true" />
             <RadzenGridColumn  TItem="BrukerRespons" Property="Fornavn" Title="Fornavn" Width="100px" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Mellomnavn" Title="Mellomnavn" Width="100px" />
             <RadzenGridColumn  TItem="BrukerRespons" Property="Etternavn" Title="Etternavn" Width="100px" />
             <RadzenGridColumn  TItem="BrukerRespons" Property="Tlf" Title="Telefon" Width="100px" />
             <RadzenGridColumn  TItem="BrukerRespons" Property="Brukernavn" Title="Brukernavn" Width="120px" />
@@ -87,17 +106,18 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
 } 
 else
 {
-    <RadzenAlert Title="Ingen data å vise." style="width: 100%" AlertStyle="AlertStyle.Info" Variant="Variant.Flat" Shade="Shade.Lighter" AllowClose=false>
+
+    <RadzenAlert Title="Ingen data å vise." style="width: 100%" AlertStyle="AlertStyle.Warning" Variant="Variant.Flat" Shade="Shade.Lighter" AllowClose=false>
         Last opp en fil (TXT, CSV eller JSON)
     </RadzenAlert>
+
 }
 
 
 @code
 {
 
-
-
+    public string? domain { get; set; }
     public List<BrukerRespons>? BrukerRes;
     public long maxFileSize = 1024 * 1024 * 3;  // 3MB  List<Ansatte> ansatteListe = new List<Ansatte>();
     private List<string> errors = new List<string>();
@@ -139,8 +159,6 @@ else
         }
     }
 
-
-
     public async Task<List<BrukerRespons>> Files(IBrowserFile file)
     {
         if (file is null)
@@ -159,9 +177,7 @@ else
                 var allIds = new List<string>();
                 string line;
                 bool isFirstLine = true;
-
                 while ((line = await reader.ReadLineAsync()) != null)
-
                 {
                     if (isFirstLine)
                     {
@@ -170,7 +186,6 @@ else
                     }
                     allIds.AddRange(line.Split(',').Where(id => !string.IsNullOrWhiteSpace(id)));
                 }
-
                 if (allIds.Count > 0)
                 {
                     try
@@ -179,7 +194,7 @@ else
                         var idsString = string.Join(",", allIds);
 
                         // ikke for hver linje, men alle på en
-                        await HttpClientPost.PostFlereId(idsString);
+                        await HttpClientPost.PostFlereId(idsString, domain);
 
                         // Anta at HentBrukerResponse er en metode for å hente lagrede svar
                         if (HttpClientPost.HentBrukerResponse() != null)
@@ -200,7 +215,6 @@ else
         {
             errors.Add($"Feil ved innlesing av fil: {file.Name}. Feilmelding: {ex.Message}");
         }
-
         return idListe;
     }
     public async Task<List<BrukerRespons>> FilesJson(IBrowserFile file)
@@ -210,10 +224,8 @@ else
             Console.WriteLine("Ingen fil valgt.");
             return new List<BrukerRespons>();
         }
-
         List<BrukerRespons> gyldigeBrukere = new List<BrukerRespons>();
         Console.WriteLine($"Laster opp filen '{file.Name}'...");
-
         try
         {
             using (var stream = file.OpenReadStream())
@@ -221,19 +233,17 @@ else
             {
                 string jsonContent = await reader.ReadToEndAsync();
                 List<BrukerRespons> brukerListe = JsonConvert.DeserializeObject<List<BrukerRespons>>(jsonContent);
-
                 // Samler gyldige IDer
                 var gyldigId = brukerListe.Where(b => int.TryParse(b.Id, out _)).Select(b => b.Id).ToList();
-
                 if (gyldigId.Any() && file != null)
                 {
                     //komma-separert streng
                     string idString = String.Join(",", gyldigId);
-
+                    if (domain != null){
                     // Post IDs til api
-                    await HttpClientPost.PostFlereId(idString);
+                    await HttpClientPost.PostFlereId(idString, domain);
                     Console.WriteLine($"IDer sendt til API: {idString}");
-
+                }
                     // metode for å hente responsen            
                     gyldigeBrukere = HttpClientPost.HentBrukerResponse(); 
                 }
@@ -247,10 +257,8 @@ else
         {
             Console.WriteLine($"Generisk feil: {e.Message}");
         }
-
         return gyldigeBrukere;
     }
-
 
     //3
     //Sjekker om filen samsvarer med riktige typer-filer
@@ -258,7 +266,6 @@ else
     {
         try
         {
-
             if (file != null)
             {
                 var fileExtension = Path.GetExtension(file.Name)?.ToLower();
@@ -266,21 +273,17 @@ else
                 {
                     BrukerRes = await Files(file);
                     Console.WriteLine($"Filen '{file.Name}' er ferdig lastet opp");
-
                 }
                 else if (fileExtension == ".json")
                 {
                     BrukerRes = await FilesJson(file);
                     Console.WriteLine($"Filen '{file.Name}' er ferdig lastet opp.");
                 }
-
                 else if (fileExtension != ".csv" || fileExtension != ".json" || fileExtension != ".txt")
                 {
                     errors.Add("Det må være en JSON-, CSV eller TXT-fil.");
                     Console.WriteLine("Det må være en JSON-, CSV eller TXT-fil.");
                 }
-
-
             }
             else if (file == null)
             {
@@ -296,9 +299,7 @@ else
             errors.Add($"Error: {ex.Message}");
             throw;
         }
-
     }
-
 
     public async Task Eksporter(string fileExtension)
     {
@@ -307,11 +308,9 @@ else
             if (BrukerRes != null && BrukerRes.Any())
             {
                 string fileName = $"data.{fileExtension}";
-
                 // Eksporter til CSV-fil
                 if (fileExtension.ToLower() == "csv")
                 {
-
                     using (StreamWriter writer = new StreamWriter(fileName))
                     {
                         await writer.WriteLineAsync("id,fornavn,etternavn,tlf,brukernavn,passord,epost");
@@ -320,17 +319,13 @@ else
                             string linje = $"{bruker.Id},{bruker.Fornavn},{bruker.Mellomnavn},{bruker.Etternavn},{bruker.Tlf},{bruker.Brukernavn},{bruker.Passord},{bruker.Epost}";
                             await writer.WriteLineAsync(linje);
                         }
-
                     }
                     string fileContent = await File.ReadAllTextAsync(fileName);
-
                     await JsRuntimeMethod(fileName, fileContent);
-
                 }
                 // Eksporter til TXT-fil
                 else if (fileExtension.ToLower() == "txt")
                 {
-
                     using (StreamWriter writer = new StreamWriter(fileName))
                     {
                         await writer.WriteLineAsync("id,fornavn,etternavn,tlf,brukernavn,passord,epost");
@@ -342,11 +337,8 @@ else
                         }
                     }
                     string fileContent = await File.ReadAllTextAsync(fileName);
-
                     await JsRuntimeMethod(fileName, fileContent);
-
                 }
-
                 Console.WriteLine($"Eksportert til {fileExtension.ToUpper()}.");
             }
             else
