--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -21,10 +21,6 @@
 @attribute [StreamRendering]
 @attribute [Authorize]
 
-
-
-
-
 <PageTitle>Hjem</PageTitle>
 
 <RadzenRow AlignItems="AlignItems.Center" class="rz-text-align-center pt-2 row-cols-sm-auto" Gap="1rem" >
@@ -40,22 +36,18 @@
             <RadzenButton Text="Generer data" class="mt-4 bg-danger" Click="@GeneratorPage" />
         </RadzenRow>
     </RadzenCard>
-
 </RadzenRow>
 
-
-
-    @code {
-    //@attribute [Authorize]
-
-    private void ImporterPage() { 
-            NavigationManager.NavigateTo("Importer");
-        }
+@code {
+    private void ImporterPage() 
+    { 
+        NavigationManager.NavigateTo("Importer");
+    }
     private void GeneratorPage()
     {
         NavigationManager.NavigateTo("Generator");
     }
-    }
+}
 
 
 
