adda @attribute [Authorize]

--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -15,7 +15,7 @@
 @using Models
 @using Microsoft.AspNetCore.Authorization
 @using System.Linq
-
+@attribute [Authorize]
 @rendermode @(new InteractiveServerRenderMode(prerender: true))
 @attribute [StreamRendering]
 
