--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -14,7 +14,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Components.Forms;
 @using Models
-
+@attribute [Authorize]
 @using System.Linq
 
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
