--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -8,7 +8,7 @@
 @using System;
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
-
+@attribute [Authorize]
 
 
 
@@ -61,7 +61,7 @@
                 </div>
 
                 <div> 
-                    <RadzenTextBox id="generatordomain1" 
+                    <RadzenTextBox id="generatordomainManuelt" 
                         Value="@domain" 
                         Change=@(args => domain = args)
                         Placeholder="F.eks: Generator.com" 
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="col-md-12 p-2 text-center">                      
-                    <RadzenButton id="genererKnapp2" Text="Generer" ButtonStyle="ButtonStyle.Success" Click="@SendIdAuto" style="width: 25%" />
+                    <RadzenButton id="genererKnappID" Text="Generer" ButtonStyle="ButtonStyle.Success" Click="@SendIdAuto" style="width: 25%" />
                 </div>
                 }
 
