adda div id på generatorantall

--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -86,7 +86,7 @@
                         </RadzenAlert>
                     </div>
 
-                    <div class="col-md-12 p-2">
+                    <div class="col-md-12 p-2" id="generatorantalldiv">
                         <RadzenNumeric id="generatorantall" TValue="int" Value="@ids" Change=@(args => ids = args) Placeholder="F.eks: 10" style="width: 200px" />
                     </div>
 
