--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -358,7 +358,7 @@ else
                 var jsonData = BrukerRes;
 
                 // Serialisere listen til JSON
-                var jsonString = JsonConvert.SerializeObject(jsonData);
+                var jsonString = JsonConvert.SerializeObject(jsonData, Formatting.Indented);
 
                 await JsRuntimeMethod("data.json", jsonString);
 
