--- a/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/Nav.razor
@@ -44,11 +44,13 @@
 
 </RadzenLayout>
 
+<div>
 <RadzenFooter class="rz-text-align-center shadow-lg">
 
     <RadzenText TextStyle="TextStyle.Overline" class="p-2">Datagenerator ┃ Gruppe 5 ┃ @@2024 </RadzenText>
 
-</RadzenFooter>
+    </RadzenFooter>
+</div>
 @code {
     bool sidebarExpanded = true;
 
