--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -15,7 +15,7 @@
 <PageTitle>Generator</PageTitle>
 
 
-<div>
+<div  class="pb-2">
     <RadzenCard class="text-center ">
         <div class="row">
             <div class="col-md-12 ">
